src/test/ui/union/union-sized-field.stderr
error[E0277]: the size for values of type `T` cannot be known at compilation time
  --> $DIR/union-sized-field.rs:4:5
   |
LL |     value: T,
   |     ^^^^^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `std::marker::Sized` is not implemented for `T`
   = note: to learn more, visit <https://doc.rust-lang.org/book/ch19-04-advanced-types.html#dynamically-sized-types-and-the-sized-trait>
   = help: consider adding a `where T: std::marker::Sized` bound
   = note: no field of a union may have a dynamically sized type

error[E0277]: the size for values of type `T` cannot be known at compilation time
  --> $DIR/union-sized-field.rs:9:5
   |
LL |     value: T,
   |     ^^^^^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `std::marker::Sized` is not implemented for `T`
   = note: to learn more, visit <https://doc.rust-lang.org/book/ch19-04-advanced-types.html#dynamically-sized-types-and-the-sized-trait>
   = help: consider adding a `where T: std::marker::Sized` bound
   = note: only the last field of a struct may have a dynamically sized type

error[E0277]: the size for values of type `T` cannot be known at compilation time
  --> $DIR/union-sized-field.rs:15:11
   |
LL |     Value(T),
   |           ^ doesn't have a size known at compile-time
   |
   = help: the trait `std::marker::Sized` is not implemented for `T`
   = note: to learn more, visit <https://doc.rust-lang.org/book/ch19-04-advanced-types.html#dynamically-sized-types-and-the-sized-trait>
   = help: consider adding a `where T: std::marker::Sized` bound
   = note: no field of an enum variant may have a dynamically sized type

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0277`.
